--- a/Problem3/unHealth.html
+++ b/Problem3/unHealth.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Problem 3: Exploring UN Twitter Data with Brushing and Linking</title>
     <script src="../libs/d3.v3.min.js"></script>
     <style>
         .axis path,
         .axis line {
             fill: none;
             stroke: lightgrey; }
+		.axis text{
+			font-family:sans-serif;
+			font-weight:bold;
+			font-size: 12px;
+			}
 
         .brush .extent {
             stroke: black;
@@ -18,8 +23,9 @@
             stroke: black;
             fill-opacity: 0.125; }
 
-        .timeArea {
+        .area {
             fill: steelblue;
+			clip-path: url(#clip)
 				}
 
         .path {
@@ -29,11 +35,15 @@
         }
 
         .overviewPath {
-            stroke-width:1;
+			stroke: lightblue;
+            stroke-width:1.5;
+			fill: none;
+
 
         }
 
         .detailPath {
+			stroke: lightblue;
             stroke-width:2;
         }
 
@@ -44,16 +54,47 @@
             fill:steelblue;
             fill-opacity:0.5;
         }
+		
+		h1
+		{
+		text-align:center;
+			font-family:sans-serif;
+			font-weight:bold;
+		}
+		
+		h2
+		{
+		text-align:center;
+			font-family:sans-serif;
+			font-weight:bold;
+			font-size: 12px;
+		}
+		
+		p
+		{
+		text-align:center;
+			font-family:sans-serif;
+			font-size: 12px;
+		}
 
     </style>
 
 </head>
 <body>
-<div id="visUN"></div>
-
+<h1>UN Global Pulse: Women's Health Data</h1>
+<p>This data was retrieved by searching the Twitter Firehose for a range of keywords about women's health. Find out more <a href="http://unglobalpulse.net/ewec/">here.</a> </p>
+<div id="visUN" align="center">
 
 	<script src="unHealth.js"></script>
-
-
+	
+</div>
+<div id= "notable">
+<h2> Notable Data Trends:</h2>
+<form align="center">
+    <label><input type="button" name="trends" value="National Wear Red Day" ></label>
+    <label><input type="button" name="trends" value="Health & Human Services Announcement" ></label>
+</form>
+</div>
+  
 </body>
 </html>
