--- a/Problem 2/linegraph.html
+++ b/Problem 2/linegraph.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Problem 2: Comparing Timelines</title>
     <script src="../libs/d3.v3.min.js"></script>
     <style>
         .axis path,
@@ -14,13 +14,22 @@
             fill:steelblue;
             fill-opacity:0.5;
             clip-path: url(#clip);
+			
         }
+		h1
+		{
+		text-align:center;
+			font-family:sans-serif;
+			font-weight:bold;
+			font-size:18px;
+		}
 
 
     </style>
 
 </head>
 <body>
+<h1>Population Estimates</h1>
     <div id="vis"></div>
 
 
